syntax = "proto3";

option go_package = "github.com/breez/data-sync/proto";
package sync;

service Syncer {
  rpc SetRecord(SetRecordRequest) returns (SetRecordReply) {}
  rpc ListChanges(ListChangesRequest) returns (ListChangesReply) {}
  rpc ListenChanges(ListenChangesRequest) returns (stream Record) {}
}

message Record {
  int64 id = 1;
  float version = 2;
  bytes data = 3;
}

message SetRecordRequest {
  bytes record_data = 1;
  float record_version = 2;
  uint32 request_time = 3;
  string signature = 4;
}
message SetRecordReply {
  int64 new_id = 1;
}

message ListChangesRequest {
  int64 from_id = 1;
  uint32 request_time = 2;
  string signature = 3;
}
message ListChangesReply { repeated Record changes = 1; }

message ListenChangesRequest {
  uint32 request_time = 1;
  string signature = 2;
}
